@@ -1,12 +1,12 @@
 #define _GNU_SOURCE
 
 #include "gen_handler.h"
-#include "api.h"
 #include "crypt.h"
 #include "device_code.h"
 #include "file_io/file_io.h"
 #include "file_io/oidc_file_io.h"
 #include "httpserver/httpserver.h"
+#include "ipc/communicator.h"
 #include "ipc/ipc_values.h"
 #include "issuer_helper.h"
 #include "parse_ipc.h"
@@ -46,7 +46,8 @@ void handleGen(struct oidc_account* account, struct arguments arguments,
     flow = oidc_sprintf("\"%s\"", flow);
   }
   printf("Generating account configuration ...\n");
-  char* res = communicate(REQUEST_CONFIG_FLOW, REQUEST_VALUE_GEN, json, flow);
+  char* res =
+      ipc_communicate(REQUEST_CONFIG_FLOW, REQUEST_VALUE_GEN, json, flow);
   clearFreeString(flow);
   clearFreeString(json);
   json = NULL;
@@ -98,7 +99,7 @@ void handleCodeExchange(struct arguments arguments) {
     needFree   = 1;
   }
 
-  char* res = communicate(arguments.codeExchangeRequest);
+  char* res = ipc_communicate(arguments.codeExchangeRequest);
   if (NULL == res) {
     printError("Error: %s\n", oidc_serror());
     exit(EXIT_FAILURE);
@@ -128,7 +129,7 @@ void handleStateLookUp(const char* state, struct arguments arguments) {
   int i = 0;
   while (config == NULL && i < MAX_POLL) {
     i++;
-    res = communicate(REQUEST_STATELOOKUP, state);
+    res = ipc_communicate(REQUEST_STATELOOKUP, state);
     if (NULL == res) {
       printf("\n");
       printError("Error: %s\n", oidc_serror());
@@ -148,10 +149,10 @@ void handleStateLookUp(const char* state, struct arguments arguments) {
         "Please press Enter to try it again.\n" C_RESET,
         i);
     getchar();
-    res = communicate(REQUEST_STATELOOKUP, state);
+    res = ipc_communicate(REQUEST_STATELOOKUP, state);
     if (res == NULL) {
       printError("Error: %s\n", oidc_serror());
-      clearFreeString(communicate(REQUEST_TERMHTTP, state));
+      clearFreeString(ipc_communicate(REQUEST_TERMHTTP, state));
       exit(EXIT_FAILURE);
     }
     config = gen_parseResponse(res, arguments);
@@ -161,7 +162,7 @@ void handleStateLookUp(const char* state, struct arguments arguments) {
           "state='%s'\n" C_IMPORTANT
           "Please try state lookup again by using:\noidc-gen --state=%s\n",
           state, state);
-      clearFreeString(communicate(REQUEST_TERMHTTP, state));
+      clearFreeString(ipc_communicate(REQUEST_TERMHTTP, state));
       exit(EXIT_FAILURE);
     }
   }
@@ -193,7 +194,7 @@ char* gen_handleDeviceFlow(char* json_device, char* json_account,
   clearFreeDeviceCode(dc);
   while (expires_in ? expires_at > time(NULL) : 1) {
     sleep(interval);
-    char* res = communicate(REQUEST_DEVICE, json_device, json_account);
+    char* res = ipc_communicate(REQUEST_DEVICE, json_device, json_account);
     struct key_value pairs[3];
     pairs[0].key = "status";
     pairs[1].key = "error";
@@ -291,8 +292,8 @@ struct oidc_account* registerClient(struct arguments arguments) {
 
   char* json = accountToJSON(*account);
   printf("Registering Client ...\n");
-  char* res = communicate(REQUEST_CONFIG_AUTH, REQUEST_VALUE_REGISTER, json,
-                          authorization ?: "");
+  char* res = ipc_communicate(REQUEST_CONFIG_AUTH, REQUEST_VALUE_REGISTER, json,
+                              authorization ?: "");
   if (arguments.token.useIt && arguments.token.str == NULL) {
     clearFreeString(authorization);
   }
@@ -394,9 +395,9 @@ void handleDelete(struct arguments arguments) {
 }
 
 void deleteClient(char* short_name, char* account_json, int revoke) {
-  char* res = communicate(REQUEST_CONFIG,
-                          revoke ? REQUEST_VALUE_DELETE : REQUEST_VALUE_REMOVE,
-                          account_json);
+  char* res = ipc_communicate(
+      REQUEST_CONFIG, revoke ? REQUEST_VALUE_DELETE : REQUEST_VALUE_REMOVE,
+      account_json);
 
   struct key_value pairs[2];
   pairs[0].key = "status";
@@ -899,7 +900,7 @@ void gen_http_signal_handler(int signo) {
   switch (signo) {
     case SIGINT:
       if (global_state) {
-        clearFreeString(communicate(REQUEST_TERMHTTP, global_state));
+        clearFreeString(ipc_communicate(REQUEST_TERMHTTP, global_state));
         clearFreeString(global_state);
         global_state = NULL;
       }
