@@ -43,5 +43,7 @@ oidc-agent (1.2.8) UNRELEASED; urgency=medium
   * Optionally prints the device code url QR-code directly to the terminal
   * Validation for redirect url format
   * Fixes some typos
+  * Backward-compatible API-change: ipc access token requests now also contain the
+    associated issuer; also the C-API includes it
 
- -- Gabriel Zachmann <gabriel.zachmann@kit.edu>  Fri, 05 Oct 2018 10:15:55 +0200
+ -- Gabriel Zachmann <gabriel.zachmann@kit.edu>  Mon, 08 Oct 2018 10:16:31 +0200
